# sincfold_utils

./: README.md  basic_tests.ipynb  debug.ipynb  pyproject.toml  setup.py  tests.ipynb
samples/: sample.ct  trna.fasta
src/sincfold_utils/: constants.py  io.py  metrics.py  predictors.py  validate.py
src/sincfold_utils/tools/RNAstructure/: Readme.md
